# fastapi-tdd

./: .env  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  logging.config  pyproject.toml  pytest.ini
app/: db_connection.py  main.py  models.py
app/routers/: category_routes.py
app/schema/: category_schema.py
app/utils/: category_utils.py
migrations/: env.py
migrations/versions/: 1e8ed760265a_add_product_image.py  36bbfdb07296_add_product_table.py  3ed9b4bbb6c6_update_nullable.py  54e1776ada80_initial.py  6844a21036a2_add_default_value.py  6bb36af74625_add_seasonal_event.py  8025a8173744_add_product_line_attribute_value_table.py  a3ae758e758c_category_update.py  a8bcaacbed52_add_product_line.py  b55a1fb29079_add_attribute_value_table.py  bd1a03f5251f_add_product_product_type_table.py  d452c5deceba_add_attribute.py  ded88ee04958_add_unique_constraints.py  ea6e6e8d01a1_add_product_type_table.py  fcbc5ceac1aa_update_constraints.py
tests/: conftest.py  fixtures.py
tests/factories/: models_factory.py
tests/integration/: conftest.py  test_integrated_category.py
tests/models/: test_attribute.py  test_attribute_value.py  test_category.py  test_product.py  test_product_image.py  test_product_line.py  test_product_line_attribute_value.py  test_product_product_type.py  test_product_type.py  test_seasonal_event.py
tests/unit/: test_unit_category.py
tests/utils/: database_utils.py  docker_utils.py  pytest_utils.py
